added example student

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -5,6 +5,6 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 </head>
 <body>
-    Nema nista
+    Get student: <a href="/student?index=314/09/i">/student?index=314/09/i</a>
 </body>
 </html>
