added links to index

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -6,5 +6,7 @@
 </head>
 <body>
     Get student: <a href="/student?index=314/09/i">/student?index=314/09/i</a>
+    <br/>
+    Get ispiti for student: <a href="/student/ispiti?index=314/09/i">/student/ispiti?index=314/09/i</a>
 </body>
 </html>
