jdbi implementation for student prijave endpoint

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -5,8 +5,10 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 </head>
 <body>
-    Get student: <a href="/student?index=314/09/i">/student?index=314/09/i</a>
+    Get student: <a href="/student?index=314">/student?index=314</a>
     <br/>
-    Get ispiti for student: <a href="/student/ispiti?index=314/09/i">/student/ispiti?index=314/09/i</a>
+    Get ispiti for student: <a href="/student/ispiti?index=314">/student/ispiti?index=314</a>
+    <br/>
+    Get prijave for student: <a href="/student/314/prijave">/student/314/prijave</a>
 </body>
 </html>
